[package]
name = "robot_middleware"
version = "0.1.0"
authors = ["julien-guillan <guillan.julien@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync"] }
warp = "0.2"
futures = { version = "0.3", default-features = false }
